--- a/css/_Bio.scss
+++ b/css/_Bio.scss
@@ -12,22 +12,27 @@
 
   .slick-active.slick-center {
     .bio-photo {
-      width: 162px;
+      transform: scale(1.25);
+      /*width: 162px;
       height: 162px;
-      padding: 20px;
+      padding: 20px;*/
 
       img {
-        width: 122px;
-        height: 122px;
+        /*width: 122px;
+        height: 122px;*/
         opacity: 1;
       }
 
       &::before {
-        width: 142px;
+        /*width: 142px;
         height: 142px;
         top: 10px;
-        left: 10px;
-        background-color: white;
+        left: 10px;*/
+        background-color: var(--kitsuneOrange);
+      }
+
+      &:hover {
+        transform:  scale(1.25);
       }
     }
   }
@@ -41,6 +46,15 @@
     position: relative;
     cursor: pointer;
     //transition: padding 0.6s;
+    transition: transform 0.6s ease-in-out;
+
+    &:hover {
+      transform: scale(1.1);
+
+      img {
+        opacity: 1;
+      }
+    }
 
     img {
       width: 102px;
@@ -50,6 +64,7 @@
       opacity: 0.75;
       //transition-property: height, opacity, width;
       //transition-duration: 0.6s;
+      transition: opacity 0.6s ease-in-out;
     }
 
     &::before {
