--- a/src/css/_Bio.scss
+++ b/src/css/_Bio.scss
@@ -1,51 +1,65 @@
+:root {
+  --bio-photo-width: 102px;
+  --bio-photo-height: 102px;
+  --bio-photo-border-width: 20px;
+}
+
 .bios-nav {
-  //margin: 0 -3em 0;
-  /*position: relative;
-  margin: 7em -3em 0;
-  padding: 7em 0 0;
-  border-top: 2px solid white;
-
-  > div {
-    padding: 0 3em;
-  }
-  */
-
   .slick-active.slick-center {
     .bio-photo {
       transform: scale(1.25);
-      /*width: 162px;
-      height: 162px;
-      padding: 20px;*/
 
       img {
-        /*width: 122px;
-        height: 122px;*/
         opacity: 1;
       }
 
       &::before {
-        /*width: 142px;
-        height: 142px;
-        top: 10px;
-        left: 10px;*/
         background-color: var(--kitsuneOrange);
       }
 
       &:hover {
-        transform:  scale(1.25);
+        transform: scale(1.25);
       }
     }
   }
 
+  .slick-arrow {
+    width: 32px;
+    height: 32px;
+    background: #fff;
+    border-radius: 50%;
+
+    &:hover {
+      cursor: pointer;
+    }
+
+    &.slick-prev,
+    &.slick-next {
+      &::before {
+        position: relative;
+        top: 2px;
+        font-size: 32px;
+        color: var(--kitsuneOrange);
+      }
+    }
+
+    &.slick-prev {
+      left: 0;
+    }
+
+    &.slick-next {
+      right: 0;
+    }
+  }
+
+  // photo container
   .bio-photo {
     width: 162px;
     height: 162px;
+    margin: 0 auto;
     padding: 30px 0 0 30px;
-    //border-radius: 50%;
-    //overflow: hidden;
     position: relative;
     cursor: pointer;
-    //transition: padding 0.6s;
     transition: transform 0.6s ease-in-out;
 
     &:hover {
@@ -57,29 +71,26 @@
     }
 
     img {
-      width: 102px;
-      height: 102px;
+      width: var(--bio-photo-width); //102px; // .bio-photo width minus (2 * .bio-photo padding-left)
+      height: var(--bio-photo-height); //102px; // .bio-photo height minus (2 * .bio-photo padding-top)
       margin: 0;
       border-radius: 50%;
       opacity: 0.75;
-      //transition-property: height, opacity, width;
-      //transition-duration: 0.6s;
       transition: opacity 0.6s ease-in-out;
     }
 
+    // circle backdrop behind photo
     &::before {
       content: '';
       display: block;
-      width: 122px;
-      height: 122px;
+      width: calc(var(--bio-photo-width) + var(--bio-photo-border-width)); //122px; // .bio-photo width minus (2 * & left)
+      height: calc(var(--bio-photo-height) + var(--bio-photo-border-width)); //122px; // .bio-photo height minus (2 * & top)
       position: absolute;
-      top: 20px;
-      left: 20px;
+      top: var(--bio-photo-border-width);
+      left: var(--bio-photo-border-width);
       z-index: -1;
       background: #f9f9f9;
       border-radius: 50%;
-      //transition-property: height, left, top, width;
-      //transition-duration: 0.6s;
     }
   }
 }
@@ -87,12 +98,12 @@
 .bio {
   padding: 1em 0 0;
 
-  h3 { // name
+  h3 {
     color: var(--kitsuneOrange);
     margin-bottom: 0;
   }
 
-  h4 { // title
+  h4 {
     color: var(--kitsuneOrange);
     font-size: 1.15rem;
   }
