--- a/src/css/_Bio.scss
+++ b/src/css/_Bio.scss
@@ -5,8 +5,14 @@
 }
 
 .bios-nav {
+  display: none;
+
   &.unslicked {
     display: none;
+  }
+
+  @media only screen and (min-width: 60em) {
+    display: block;
   }
 
   .slick-active.slick-center {
